--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body> 
         <!-- navigation -->
         <header>
-        <h1>RUN BUDDY</h1>
+        <h1>RUN BUDDY 1</h1>
        </header>
 
         <!--hero/jumbotron-->
