--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8"  /> 
 
-        <title>Run Buddy</title>
+        <title>Run Buddy 1</title>
       <nav></nav>
     </head>
 
