--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <meta charset="UTF-8"  /> 
 
         <title>Run Buddy</title>
+
+        <!-- Add this to the page and see what happens! -->
+        <style> 
+        body { 
+            background-color: tomato;
+        }h1 { 
+            font-size: 100px;
+        }  </Style>
      </head>
 
     <body> 
