--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <!-- list item element -->
                 <li>
                     <!-- Anchor element -->
-                    <a href="#what-we-do"> What WE Do</a>
+                    <a href="#what-we-do"> What We Do</a>
                 </li>
                
                 <li>
