--- a/index.html
+++ b/index.html
@@ -67,5 +67,10 @@
     <footer>
         <h2>&hearts; Made with love by Run Buddy.</h2>
     </footer>
+    <div>
+        <a href="#">Read Our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+    </div>
+    
     </body>
     </html>
