--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
     <!-- footer -->
     <footer>
-        <h2>&hearts; Made with love by Run Buddy.</h2>
+        <h2>❤️ Made with love by Run Buddy.</h2>
     
     <div>
         <a href="#">Read Our Privacy Policy</a><br />
