--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
         <!-- "what we do" section-->
         <section id="What you do" class="intro">
+        <section id="what-you-do" class="steps">
             <h2>What You Do</h2>
 
             <div>
