--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </h2>Meet The Trainers</h2>
               <article class="trainer">
                 <img src="./assets/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio">
+                <div class="trainer-bio text-left">
                     <h3>Arron Stephens</h3>
                     <h4> Speed / Strength</h4>
                     <p>
@@ -128,6 +128,28 @@
                     </p>
                 </div>
               </article>
+              <article class="trainer">
+                <div class="trainer-bio text right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                </p>
+                </div>
+                <img src="./assets/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+              </article>
+              <article class="trainer">
+                <img src="./assets/01-05-trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+              <div class="trainer-bio text-left">
+                <h3>Harry "the HeadBand" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                </p>
+                </div>
+            </article>
              </section>
 
              <!-- "reach out" section-->
