--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </section>
                 <section id="your-trainers" class="trainers">
                 <h2 class="section-title primary-border">
-              </h2>Meet The Trainers</h2>
+                  Meet The Trainers</h2>
               <article class="trainer">
                 <img src="./assets/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
