--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         </section>
 
         <!-- "what we do" section-->
-        <section id="What you do" class="intro">
         <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
 
@@ -110,10 +109,10 @@
                 <h3>Step 4: <span>See Results.</span></h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </div>
-         <section> 
+        </section> 
 
                 <!-- "meet the trainers" section -->
-                </section>
+                
                 <section id="your-trainers" class="trainers">
                 <h2 class="section-title primary-border">
                   Meet The Trainers</h2>
@@ -155,6 +154,30 @@
              <!-- "reach out" section-->
     <section>
     <h2> Reach Out</h2>
+    <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3361.427640930492!2d-117.04440678517523!3d32.59478518102745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d94ec273e770cb%3A0xca86a4290efdd0cb!2sMain%20St%2C%20Chula%20Vista%2C%20CA!5e0!3m2!1sen!2sus!4v1655084207060!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+        width="400"
+        height="400"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy">
+        </iframe>
+    </div>
+    <div>
+        <h3> Run Buddy</h3>
+        <p>
+            Any Questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+            55 Main Street <br/r>
+            Some Town, Ca <br/r> 
+            12345<br/r>
+            P: 555.RUN.BUDZ (555.786.2839)<br/>
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+    </div>
     </section>
         
     <!-- footer -->
