--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
              </section>
 
              <!-- "reach out" section-->
-    <section>
-    <h2> Reach Out</h2>
+    <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3361.427640930492!2d-117.04440678517523!3d32.59478518102745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d94ec273e770cb%3A0xca86a4290efdd0cb!2sMain%20St%2C%20Chula%20Vista%2C%20CA!5e0!3m2!1sen!2sus!4v1655084207060!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
         width="400"
