--- a/assets/css/privacy-policy.html
+++ b/assets/css/privacy-policy.html
@@ -4,11 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy-Run Buddy</title>
-</head>
+    <link rel="stylesheet" href="./assets/css/privacystyle.css" />"
+  </head>
 <body>
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            <a href="/">
+                RUN BUDDY</a>
          </h1>
          <nav>
             <!-- Unordered list element -->
@@ -41,6 +43,7 @@
        </section>
 
        <article class="secondary-content">
+       
         <p>
             Website Terms of Use
           </p>
