--- a/assets/css/privacy-policy.html
+++ b/assets/css/privacy-policy.html
@@ -36,7 +36,7 @@
             </ul>
          </nav>
        </header>
-       <section class="hero hero-secondary">
+       <section class="hero">
         <h2 class="page-title">
             Privacy Policy
         </h2>
