--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8"  /> 
         <title>Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="">
      </head>
 
     <body> 
@@ -48,7 +49,7 @@
                 <label for="email">Enter email address:</label>
                 <input type="text" placeholder="Email Address" name="email" id="email" class="form-input">
                 <label type="phone">Enter a telephone number:</label>
-                 <input type="tetext" placeholder="Phone Number" name="phone" id="phone" class="form-input">
+                 <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input">
                  <p>
                      Have you worked out with a trainer before?
                      <input type="radio" name="trainer-comfirm" id="trainer-yes" />
@@ -185,7 +186,7 @@
         <h2>❤️ Made with love by Run Buddy.</h2>
     
     <div>
-        <a href="#">Read Our Privacy Policy</a><br />
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
         &copy; 2019 Run Buddy, Inc. 
     
     </div>
