--- a/assets/css/privacy-policy.html
+++ b/assets/css/privacy-policy.html
@@ -465,7 +465,7 @@
        
     </article>
     <!-- Do this to all of the <a> elements in privacy-policy.html -->
-<a href="./index.html">What We Do</a>
+<a href="file:///Users/jio_r95/Documents/Projects/run-buddy/index.html">What We Do</a>
 
 </body>
 </html>
