--- a/index.html
+++ b/index.html
@@ -93,16 +93,22 @@
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffeeVice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
         </p>
         </div>
-        </section>
+       </section>
 
         <!-- "what we do" section-->
         <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
 
-            <div>
+            <div class="steps">
+                <h3>Step 1.</h3>
+                <div class="step-infro">
+                    <div class="step-img">
             <img src=".//assets/01-04-svgs/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+               </div>
+        <div class="step-text">
+             <h4>Fill Out the Form Above.</h4>
                 <p> You're already here, so why not?</p>
+            </div>
             </div>
 
             <div>
@@ -131,31 +137,34 @@
                   Meet The Trainers</h2>
               <article class="trainer">
                 <img src="./assets/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4> Speed / Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                     </p>
                 </div>
               </article>
+
               <article class="trainer">
-                <div class="trainer-bio text right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
+                <img src="./assets/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                <h3 class="trainer-name">Joanna Gill</h3>
+                <h4 class="trainer-role">Endurance</h4>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
                     itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                 </p>
-                </div>
-                <img src="./assets/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-              </article>
+               </div>
+            
+            </article>
+
               <article class="trainer">
                 <img src="./assets/01-05-trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-              <div class="trainer-bio text-left">
-                <h3>Harry "the HeadBand" Smith</h3>
-                <h4>Strength</h4>
+              <div class="trainer-bio">
+                <h3 class="trainer-name">Harry "the HeadBand" Smith</h3>
+                <h4 class="trainer-role">Strength</h4>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
