--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                 <section id="your-trainers" class="trainers">
                 <h2 class="section-title primary-border">
                   Meet The Trainers</h2>
+
+                  <div class="trainers">
               <article class="trainer">
                 <img src="./assets/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio">
@@ -185,10 +187,10 @@
             Let us know and we'll be happy to talk to you!
         </p>
         <address>
-            55 Main Street <br/r>
-            Some Town, Ca <br/r> 
-            12345<br/r>
-            P: 555.RUN.BUDZ (555.786.2839)<br/>
+            55 Main Street <br/>
+            Some Town, Ca <br/> 
+            12345<br/>
+            P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br />
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
     </div>
