--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"  />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
         <link rel="stylesheet" href="./assets/css/style.css" />
-        
+        <link rel="stylesheet" href="">
         <title>Run Buddy</title>
     </head>
 
@@ -264,7 +264,8 @@
     </div>
     </section>
          <!--"Reach Out" End-->
-    <!-- footer -->
+   
+         <!-- footer -->
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
     
